--- a/holygrailactivity.html
+++ b/holygrailactivity.html
@@ -16,12 +16,12 @@
           <div class="container">
             <div class="flex-item left">
               <div class="field">
-                <label for="firstName">First Name</label>
-                <input type="text" id="firstName" />
+                <label for="name">Name</label>
+                <input type="text" id="name" />
               </div>
               <div class="field">
-                <label for="lastName">Last Name</label>
-                <input type="text" id="lastName" />
+                <label for="phone">Phone</label>
+                <input type="text" id="phone" />
               </div>
               <div class="field">
                 <label for="email">Email</label>
