--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         display: inline-block;
       }
       .box2 {
-        background-color: blue;
+        background-color: green;
         display: inline-block;
       }
       .box3 {
-        background-color: green;
+        background-color: blue;
       }
       .box4 {
-        background-color: violet;
+        background-color: orange;
         display: none;
       }
       .box5 {
@@ -34,19 +34,34 @@
         display: inline;
       }
       .box6 {
-        background-color: aquamarine;
-        /* shorthand property - lahat ng box may 10px na padding kaser nag assign tayo ng 10px na padding*/
+        background-color: aliceblue;
+        /* padding shorthand property*/
+        /* 
+                padding-top: 10px;
+                padding-right: 10px;
+                padding-bottom: 10px;
+                padding-left: 10px;
+            */
+        padding: 10px 5px 15px 20px;
 
-        padding: 10px 5px 20px;
-        border: 1px solid rgb(255, 6, 47);
+        /* border shorthand property */
+        border: 1px solid black;
         border-width: 1px 2px 3px 4px;
-        /*border-style: solid dashed dotted double;*/
+        border-style: solid dashed double groove;
 
-        border-top: 1px solid red;
-        border-right: 2px dashed black;
-        border-left: 3px double violet;
-        border-bottom: 4px groove blue;
-        margin: 20px 10px 5px;
+        border-top: 1px solid black;
+        border-right: 2px dashed red;
+        border-bottom: 3px double green;
+        border-left: 4px groove blue;
+
+        /* margin shorthand property */
+        /* 
+                margin-top: 10px;
+                margin-right: 10px;
+                margin-bottom: 10px;
+                margin-left: 10px;
+            */
+        margin: 20px 15px 10px 5px;
       }
       .navigation {
         margin: 0;
@@ -55,32 +70,30 @@
       }
       .navigation li {
         display: inline-block;
-
-        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+        margin-right: 10px;
       }
       .navigation li a {
-        color: blueviolet;
+        color: black;
         text-decoration: none;
         font-size: 18px;
       }
-      /*pseudo class*/
+      /* pseudo-class */
       .navigation li a:hover {
         text-decoration: underline;
-        color: pink;
+        color: red;
       }
       .navigation li a:visited {
-        color: black;
+        color: darkblue;
       }
       .box7 {
         border: 1px solid black;
         padding: 20px;
-        color: black;
       }
       .box7:hover p {
-        color: darkcyan;
+        color: darkviolet;
       }
       .parent li:first-child {
-        color: darkred;
+        color: fuchsia;
         font-size: 24px;
       }
       .parent li:nth-child(3) {
@@ -95,20 +108,80 @@
         color: teal;
         font-size: 40px;
       }
+      .box8::before {
+        content: "The before content";
+        color: red;
+      }
+      .box8::after {
+        content: "The after content";
+        color: blue;
+      }
+
+      .box9 {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+      }
+      .box10 {
+        margin-top: 20px;
+        padding: 30px;
+        height: 400px;
+        border: 2px solid black;
+        position: relative;
+      }
+      .box11,
+      .box12 {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+      }
+      .box12 {
+        background-color: yellow;
+        width: 300px;
+        height: 25px;
+        z-index: -1;
+      }
+      .box10::before {
+        background-image: url(https://images.unsplash.com/photo-1487958449943-2429e8be8625?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        content: "";
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -2;
+        opacity: 0.5;
+      }
+      .box10::after {
+        background-image: url(https://images.unsplash.com/photo-1487958449943-2429e8be8625?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        content: "";
+        width: 50%;
+        height: 50%;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        z-index: -1;
+      }
     </style>
   </head>
 
   <body>
-    <h1>CSS Display Properties</h1>
+    <h1>CSS Display Property</h1>
     <div class="box box1"></div>
     <div class="box box2"></div>
     <div class="box box3"></div>
     <div class="box box4"></div>
     <div class="box box5">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, quis!
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, natus.
     </div>
     <div class="box6">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, quis!
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, enim?
     </div>
 
     <ul class="navigation">
@@ -122,9 +195,14 @@
         <a href="#">Contact Us</a>
       </li>
     </ul>
+
     <div class="box7">
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum,
+        quam.
+      </p>
     </div>
+
     <ul class="parent">
       <li>1st Child</li>
       <li>2nd Child</li>
@@ -132,5 +210,22 @@
       <li>4th Child</li>
       <li>5th Child</li>
     </ul>
+
+    <div class="box8">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa, est.
+    </div>
+
+    <div class="box9">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, sint.
+    </div>
+
+    <div class="box10">
+      <div class="box11">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis,
+        quia.
+      </div>
+
+      <div class="box12"></div>
+    </div>
   </body>
 </html>
